Refactor SDK code